@@ -1417,7 +1417,7 @@ AC_MSG_RESULT($ntp_ok)
 # timeval so just set it here for the one case that is KNOWN to use timespec.
 
 # The PPSAPI headers use "inline", so we must have a STDC compiler to use
-# the PPSAIP.
+# the PPSAPI.
 
 case "$ANSI2KNR" in
  '')
